--- a/app/templates/app/event_detail.html
+++ b/app/templates/app/event_detail.html
@@ -12,10 +12,11 @@
                 <a href="{% url 'event_edit' event.id %}" class="btn btn-outline-primary me-2">
                     <i class="bi bi-pencil me-1"></i>Editar
                 </a>
+            {% else %}
+                <a href="{% url 'purchase_ticket' event.id %}" class="btn btn-outline-primary">
+                    Comprar Entrada
+                </a>
             {% endif %}
-            <a href="{% url 'purchase_ticket' event.id %}" class="btn btn-outline-primary">
-                Comprar Entrada
-            </a>
         </div>
     </div>
 
