--- a/app/templates/app/refound/refounds.html
+++ b/app/templates/app/refound/refounds.html
@@ -12,6 +12,7 @@
             <tr>
                 <th>Código de Entrada</th>
                 <th>Evento</th>
+                <th>Motivo</th>
                 <th>Solicitante</th>
                 <th>Fecha de Solicitud</th>
                 <th>Estado</th>
@@ -25,6 +26,7 @@
                         <a href="#" class="text-primary">{{ refound.ticket_code }}</a>
                     </td>
                     <td>{{ refound.event.title }}</td>
+                    <td>{{ refound.reason }}</td>
                     <td>{{ refound.user.username }}</td>
                     <td>{{ refound.created_at }}</td>
                     {% if refound.approved == Null %}
@@ -36,25 +38,51 @@
                     {% endif %}
                     <td>
                         <div class="hstack gap-1">
-                        <a href="{% url 'event_edit' refound.id %}"
+                        {% comment %} <a href="{% url 'refound_edit' refound.id %}"
                             class="btn btn-sm btn-outline-secondary"
                             aria-label="Editar"
                             title="Editar">
                             <i class="bi bi-pencil" aria-hidden="true"></i>
-                        </a>
-                        <form action="{% url 'event_delete' refound.id %}" method="POST">
+                        </a> {% endcomment %}
+                        <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#editRefoundModal{{ refound.id }}" aria-label="Editar" title="Editar">
+                            <i class="bi bi-pencil" aria-hidden="true"></i>
+                        </button>
+                        <form action="{% url 'refound_delete' refound.id %}" method="POST">
                             {% csrf_token %}
                             <button class="btn btn-sm btn-outline-danger"
-                                title="Eliminar"
-                                type="submit"
-                                aria-label="Eliminar"
-                                titile="Eliminar">
+                                    title="Eliminar"
+                                    type="submit"
+                                    aria-label="Eliminar"
+                                    titile="Eliminar">
                                 <i class="bi bi-trash" aria-hidden="true"></i>
                             </button>
                         </form>
                         </div>
                     </td>
                 </tr>
+                <div class="modal fade" id="editRefoundModal{{ refound.id }}" tabindex="-1" aria-labelledby="editRefoundModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="editRefoundModalLabel">Editar Reembolso</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form method="post" action="{% url 'refound_edit' refound.id %}">
+                                    {% csrf_token %}
+                                    <div class="mb-3">
+                                        <label for="reason{{ refound.id }}" class="form-label">Motivo del Reembolso</label>
+                                        <textarea class="form-control" id="reason{{ refound.id }}" name="reason" rows="4">{{ refound.reason }}</textarea>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                                        <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             {% empty %}
                 <tr>
                     <td colspan="4" class="text-center">No hay reembolsos disponibles</td>
