--- a/app/templates/app/notifications/notification_form.html
+++ b/app/templates/app/notifications/notification_form.html
@@ -112,31 +112,24 @@
     const allRadio = document.getElementById('all');
     const usersRadio = document.getElementById('users');
 
-    // Deshabilitar el selector de usuarios y los destinatarios inicialmente
+    // Deshabilitar el selector de usuarios inicialmente
     usuarioSelect.required = false;
-    allRadio.disabled = true;
-    usersRadio.disabled = true;
 
     // Manejar el cambio en el selector de eventos
     eventoSelect.addEventListener('change', function () {
         const eventoId = this.value;
 
-        // Si no se selecciona un evento, deshabilitar el selector de usuarios y los destinatarios
+        // Si no se selecciona un evento, deshabilitar el selector de usuarios y mostrar las opciones de destinatarios
         if (!eventoId) {
             usuarioSelect.innerHTML = '<option value="">Selecciona un usuario</option>';
             destinatariosContainer.style.display = 'block';
             noUsuariosContainer.style.display = 'none';
             specificUserSelectContainer.style.display = 'none';
             usuarioSelect.required = false;
-            allRadio.disabled = true;
-            usersRadio.disabled = true;
             return;
         }
 
-        // Habilitar los destinatarios y cargar los datos
-        allRadio.disabled = false;
-        usersRadio.disabled = false;
-
+        // Habilitar el selector de usuarios y cargar los datos
         fetch(`/events/${eventoId}/users/`)
             .then(response => {
                 if (!response.ok) {
