Agrega alerta para eliminar notificaciones con SweetAlert

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,7 @@
         name="viewport"
         content="width=device-width, initial-scale=1"
     />
-
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.19.1/dist/sweetalert2.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -121,5 +121,6 @@
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"
 ></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </html>
