Agrega validaciones del formulario de evento

--- a/app/templates/app/event_form.html
+++ b/app/templates/app/event_form.html
@@ -34,7 +34,10 @@
                                     required
                                     type="text"
                                     value="{{ event.title }}"
-                                    name="title" />
+                                    name="title" 
+                                    minlength="3"
+                                    maxlength="200"
+                                    />
                             </div>
                             <div>
                                 <label for="description" class="form-label">Descripción *</label>
