--- a/app/templates/app/event_detail.html
+++ b/app/templates/app/event_detail.html
@@ -8,7 +8,7 @@
         </div>
 
         <div class="d-flex justify-content-end gap-2 mb-3 mt-2">
-            {% if user_is_organizer %}
+            {% if user.is_organizer %}
                 <a href="{% url 'event_edit' event.id %}" class="btn btn-outline-primary me-2">
                     <i class="bi bi-pencil me-1"></i>Editar
                 </a>
@@ -24,12 +24,12 @@
         <div class="card mt-2">
             <div class="card-body">
                 <div class="row">
-                    <div class="{% if not user_is_organizer %}col-md-8{% else %}col-md-12{% endif %}">
+                    <div class="{% if not user.is_organizer %}col-md-8{% else %}col-md-12{% endif %}">
                         <h5 class="card-title">Detalles del Evento</h5>
                         <p class="card-text mb-2">{{ event.description }}</p>
                     </div>
 
-                    {% if not user_is_organizer %}
+                    {% if not user.is_organizer %}
                     <div class="col-md-4 border-start">
                         <div class="text-center py-2">
                             <div class="countdown-circle mx-auto mb-2 d-flex align-items-center justify-content-center">
